force-app/main/default/objects/CventEvents__CustomField__c/CventEvents__CustomField__c.object-meta.xml
<CustomObject>
    <description>Stores information about Cvent Event/Contact custom fields and their mapping on SF data model.</description>
    <label>Cvent Custom Field</label>
    <nameField>
        <displayFormat>CF-{00000000}</displayFormat>
        <label>Custom Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>