force-app/main/default/objects/CventEvents__CustomField__c/fields/CventEvents__AllowedValues__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AllowedValues__c</fullName>
    <description>Stores values which are allowed on the Cvent side.</description>
    <inlineHelpText>Stores values which are allowed on the Cvent side.</inlineHelpText>
    <label>Allowed Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>