force-app/main/default/objects/CventEvents__CustomField__c/fields/CventEvents__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ErrorMessage__c</fullName>
    <description>Stores the error message of the metadata sync.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>