force-app/main/default/objects/CventEvents__CustomField__c/fields/CventEvents__FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__FieldApiName__c</fullName>
    <description>Stores SF field API name.</description>
    <inlineHelpText>Stores SF field API name.</inlineHelpText>
    <label>Field API Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>