force-app/main/default/objects/CventEvents__CustomField__c/fields/CventEvents__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__FieldLabel__c</fullName>
    <description>Stores the SF field label.</description>
    <inlineHelpText>Stores the SF field label.</inlineHelpText>
    <label>Field Label</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>