force-app/main/default/objects/CventEvents__CustomField__c/fields/CventEvents__FieldStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__FieldStub__c</fullName>
    <description>Stores the Cvent field stub.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores the Cvent field stub.</inlineHelpText>
    <label>Field Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>