force-app/main/default/objects/CventEvents__CustomField__c/fields/CventEvents__ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ObjectApiName__c</fullName>
    <description>Stores mnemonic Cvent object name (either &apos;EVENT&apos;, or &apos;CONTACT&apos;). Has been previously used to store SF object API name.</description>
    <inlineHelpText>Stores mnemonic Cvent object name (either &apos;EVENT&apos;, or &apos;CONTACT&apos;).</inlineHelpText>
    <label>Cvent Object</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>